# simplerouter

./: .gitignore  README.md  api.py  aws_model_details.json  pyproject.toml  requirements.txt
config/: allowed_providers.json
simplerouter/: api.py  provider_model_details.json  utils.py
tests/: test_api.py  test_utils.py
tests/mocks/: aws_model_summaries_mock.json
