[tool.poetry]
name = "simplerouter"
version = "0.1.0"
description = "A Flask app for simple routing between conversational model providers"
authors = ["Ola Hungerford <olaservo@gmail.com>"]
packages = [
    { include = "simplerouter" },
]

[tool.poetry.dependencies]
python = "^3.10"
blinker = "1.8.2"
boto3 = "1.35.29"
botocore = "1.35.29"
click = "8.1.7"
Flask = "3.0.3"
Flask-Cors = "5.0.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
jmespath = "1.0.1"
MarkupSafe = "2.1.5"
python-dateutil = "2.9.0.post0"
s3transfer = "0.10.2"
six = "1.16.0"
urllib3 = "2.2.3"
Werkzeug = "3.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
